[tool.poetry]
name = "fsub"
version = "1.0.0"
description = "File Share | Telegram Bot | Force Sub"
authors = ["dot7z"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiofiles = "24.1.0"
aiosqlite = "0.20.0"
async-pymongo = "0.1.7"
dnspython = "2.6.1"
Hydrogram = "0.2.0"
pyaes = "1.6.1"
pymongo = "4.9.1"
PySocks = "1.7.1"
python-dotenv = "1.0.1"
TgCrypto = "1.2.5"
uvloop = "0.20.0"

[tool.poetry.group.dev.dependencies]
typing-extensions = "4.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
